Project

General

Profile

Actions

Bug #17812

closed

leak in RGWFetchAllMetaCR

Added by Casey Bodley over 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Running valgrind on a local mstart cluster produces leaks in RGWFetchAllMetaCR. The allocation at rgw_sync.cc:810 is 'entries_index = new RGWShardedOmapCRManager'.

<error>
  <unique>0x298</unique>
  <tid>1</tid>
  <kind>Leak_DefinitelyLost</kind>
  <xwhat>
    <text>196,206 (56 direct, 196,150 indirect) bytes in 1 blocks are definitely lost in loss record 665 of 665</text>
    <leakedbytes>196206</leakedbytes>
    <leakedblocks>1</leakedblocks>
  </xwhat>
  <stack>
    <frame>
      <ip>0xA4F8216</ip>
      <obj>/usr/lib64/valgrind/vgpreload_memcheck-amd64-linux.so</obj>
      <fn>operator new(unsigned long)</fn>
      <dir>/builddir/build/BUILD/valgrind-3.11.0/coregrind/m_replacemalloc</dir>
      <file>vg_replace_malloc.c</file>
      <line>334</line>
    </frame>
    <frame>
      <ip>0xF5F255</ip>
      <obj>/home/cbodley/ceph/build/bin/radosgw</obj>
      <fn>RGWFetchAllMetaCR::operate()</fn>
      <dir>/home/cbodley/ceph/src/rgw</dir>
      <file>rgw_sync.cc</file>
      <line>810</line>
    </frame>
    <frame>
      <ip>0xD1D53E</ip>
      <obj>/home/cbodley/ceph/build/bin/radosgw</obj>
      <fn>RGWCoroutinesStack::operate(RGWCoroutinesEnv*)</fn>
      <dir>/home/cbodley/ceph/src/rgw</dir>
      <file>rgw_coroutine.cc</file>
      <line>197</line>
    </frame>
    <frame>
      <ip>0xD1F100</ip>
      <obj>/home/cbodley/ceph/build/bin/radosgw</obj>
      <fn>RGWCoroutinesManager::run(std::__cxx11::list&lt;RGWCoroutinesStack*, std::allocator&lt;RGWCoroutinesStack*&gt; &gt;&amp;)</fn>
      <dir>/home/cbodley/ceph/src/rgw</dir>
      <file>rgw_coroutine.cc</file>
      <line>488</line>
    </frame>
    <frame>
      <ip>0xD204AD</ip>
      <obj>/home/cbodley/ceph/build/bin/radosgw</obj>
      <fn>RGWCoroutinesManager::run(RGWCoroutine*)</fn>
      <dir>/home/cbodley/ceph/src/rgw</dir>
      <file>rgw_coroutine.cc</file>
      <line>626</line>
    </frame>
    <frame>
      <ip>0xF55B8A</ip>
      <obj>/home/cbodley/ceph/build/bin/radosgw</obj>
      <fn>RGWRemoteMetaLog::run_sync()</fn>
      <dir>/home/cbodley/ceph/src/rgw</dir>
      <file>rgw_sync.cc</file>
      <line>1970</line>
    </frame>
    <frame>
      <ip>0xDECF43</ip>
      <obj>/home/cbodley/ceph/build/bin/radosgw</obj>
      <fn>RGWMetaSyncStatusManager::run()</fn>
      <dir>/home/cbodley/ceph/src/rgw</dir>
      <file>rgw_sync.h</file>
      <line>278</line>
    </frame>
    <frame>
      <ip>0xDEF1FB</ip>
      <obj>/home/cbodley/ceph/build/bin/radosgw</obj>
      <fn>RGWMetaSyncProcessorThread::process()</fn>
      <dir>/home/cbodley/ceph/src/rgw</dir>
      <file>rgw_rados.cc</file>
      <line>2993</line>
    </frame>
    <frame>
      <ip>0xD90F2B</ip>
      <obj>/home/cbodley/ceph/build/bin/radosgw</obj>
      <fn>RGWRadosThread::Worker::entry()</fn>
      <dir>/home/cbodley/ceph/src/rgw</dir>
      <file>rgw_rados.cc</file>
      <line>2849</line>
    </frame>
    <frame>
      <ip>0x10A531E</ip>
      <obj>/home/cbodley/ceph/build/bin/radosgw</obj>
      <fn>Thread::entry_wrapper()</fn>
      <dir>/home/cbodley/ceph/src/common</dir>
      <file>Thread.cc</file>
      <line>89</line>
    </frame>
    <frame>
      <ip>0x10A5253</ip>
      <obj>/home/cbodley/ceph/build/bin/radosgw</obj>
      <fn>Thread::_entry_func(void*)</fn>
      <dir>/home/cbodley/ceph/src/common</dir>
      <file>Thread.cc</file>
      <line>69</line>
    </frame>
    <frame>
      <ip>0x1605E619</ip>
      <obj>/usr/lib64/libpthread-2.22.so</obj>
      <fn>start_thread</fn>
      <dir>/usr/src/debug/glibc-2.22/nptl</dir>
      <file>pthread_create.c</file>
      <line>334</line>
    </frame>
  </stack>
</error>

Related issues 1 (0 open1 closed)

Copied to rgw - Backport #17838: jewel: leak in RGWFetchAllMetaCRResolvedLoïc DacharyActions
Actions #1

Updated by Casey Bodley over 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Casey Bodley over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Loïc Dachary over 7 years ago

Actions #4

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF