rgw: delete entries_index in RGWFetchAllMetaCR

use a unique_ptr to ensure the entries_index is freed on destruction

Fixes: http://tracker.ceph.com/issues/17812

Signed-off-by: Casey Bodley <cbodley@redhat.com>
(cherry picked from commit 9c731ed6b606e39000025ab569f412ece0cc7fce)